--- a/manytask/templates/signup.html
+++ b/manytask/templates/signup.html
@@ -46,10 +46,12 @@
                     <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password" pattern="\S*" minlength="6" required>
                     <label for="floatingPassword">Password</label>
                 </div>
+                {% if use_registration_secret %}
                 <div class="form-floating my-2">
                     <input type="text" name="secret" class="form-control" id="floatingCode" placeholder="Code" required>
                     <label for="floatingCode">Secret Code</label>
                 </div>
+                {% endif %}
 
 {#                <div class="form-check text-start my-2">#}
 {#                    <input class="form-check-input" type="checkbox" name="lms_confirm" value="lms_confirm" id="lms_confirm" required>#}
