--- a/manytask/templates/signup.html
+++ b/manytask/templates/signup.html
@@ -46,6 +46,10 @@
                     <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password" pattern="\S*" minlength="6" required>
                     <label for="floatingPassword">Password</label>
                 </div>
+                <div class="form-floating my-2">
+                    <input type="password" name="password2" class="form-control" id="floatingPassword" placeholder="Re-type password" pattern="\S*" minlength="6" required>
+                    <label for="floatingPassword">Re-type password</label>
+                </div>
                 {% if use_registration_secret %}
                 <div class="form-floating my-2">
                     <input type="text" name="secret" class="form-control" id="floatingCode" placeholder="Code" required>
